add: first screen

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,3 +18,13 @@ ul
 a
     color: inherit
     text-decoration: none
+h1
+    font-family: 'Roboto Slab', serif
+    font-style: normal
+    font-weight: bold
+    font-size: 72px
+    line-height: 95px
+    color: #001E64
+    max-width: 589px
+    padding: 140px 0 0 112px
+    margin-bottom: 60px
