--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,5 @@
 @import '_settings.sass'
 @import 'blocks/_header.sass'
+@import 'blocks/_information.sass'
+@import 'blocks/_seafood.sass'
+@import 'blocks/_content.sass'
