--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ h1 {
   padding-bottom: 20px;
   margin-top: -80px;
   min-height: 100ov;
+  overflow: hidden;
 }
 
 .header__content-btn {
@@ -74,13 +75,22 @@ h1 {
   -webkit-transform: translateY(-100px);
           transform: translateY(-100px);
   position: absolute;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.header__content-btn:hover {
+  color: #001E64;
+  background-color: #FFFFFF;
 }
 
 .header__content-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   margin-right: 30px;
   font-size: 18px;
   line-height: 21px;
@@ -173,6 +183,42 @@ h1 {
 
 .menu {
   margin-top: 16px;
+}
+
+.menu__btn {
+  width: 40px;
+  border: none;
+  background-color: transparent;
+  padding: 13px 0;
+  cursor: pointer;
+  position: relative;
+  display: none;
+}
+
+.menu__btn::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  background-color: #001E64;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.menu__btn::before {
+  content: "";
+  position: absolute;
+  height: 4px;
+  background-color: #001E64;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+.menu__btn span {
+  display: block;
+  height: 4px;
+  background-color: #001E64;
 }
 
 .menu__list {
@@ -309,6 +355,13 @@ h1 {
   border: 1px solid #001E64;
   border-radius: 20px;
   cursor: pointer;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.product__content-btn:hover {
+  color: #FFFFFF;
+  background-color: #001E64;
 }
 
 .seafood {
@@ -403,5 +456,298 @@ h1 {
   font-size: 18px;
   line-height: 24px;
   text-align: center;
+}
+
+.contacts {
+  background-image: url(../images/cont.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+
+.contacts__box {
+  margin-left: auto;
+  width: 390px;
+  padding: 33px 0;
+  background-color: #ffffff;
+  padding-right: 20px;
+  padding-left: 30px;
+}
+
+.contacts__box-text {
+  font-family: 'Roboto Slab', serif;
+  width: 195px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #001E64;
+  margin-bottom: 30px;
+}
+
+.contacts__box-list {
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.contacts__box-item {
+  margin-top: 30px;
+}
+
+.contacts__box-item span {
+  display: block;
+}
+
+.footer {
+  padding: 25px 0 110px;
+}
+
+.footer__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding: 0 45px 0 23px;
+}
+
+.footer__inner .menu {
+  padding-bottom: 30px;
+}
+
+.footer__social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 19px;
+}
+
+.footer__social-item + .footer__social-item {
+  margin-left: 10px;
+}
+
+.footer__social-link path {
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.footer__social-link:hover path {
+  fill: #001E64;
+}
+
+@media (max-width: 1160px) {
+  .product__menu {
+    width: 350px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .content__item {
+    padding-right: 20px;
+  }
+  .footer .logo, .footer .menu {
+    display: none;
+  }
+  .footer {
+    padding: 40px 0 110px;
+  }
+  .footer__inner {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__social-list {
+    padding-bottom: 0;
+  }
+}
+
+@media (max-width: 1000px) {
+  .menu {
+    margin-left: auto;
+    margin-top: 12px;
+    margin-right: 20px;
+  }
+  .menu__btn {
+    display: block;
+  }
+  .menu__list {
+    position: absolute;
+    left: 20%;
+    right: 20%;
+    background-color: #ffffff;
+    display: block;
+    top: -350px;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    z-index: 5;
+  }
+  .menu__list--active {
+    top: 75px;
+  }
+  .menu__item + .menu__item {
+    margin-left: 0px;
+  }
+  .menu__link {
+    display: block;
+    padding: 20px 0;
+    text-align: center;
+  }
+  .menu__link:hover {
+    border: none;
+  }
+  .product__menu {
+    width: 250px;
+  }
+}
+
+@media (max-width: 950px) {
+  .content {
+    padding: 50px 0;
+  }
+  .content img {
+    max-width: 100%;
+  }
+  .content__item {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .content__item-content {
+    padding-right: 0;
+  }
+  .content__item-right {
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+  }
+  .content__item-title, .content__item-text {
+    max-width: 100%;
+  }
+  .content__item-right .content__item-content {
+    margin-right: 0;
+  }
+  .content__items {
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 890px) {
+  .product__inner {
+    display: block;
+  }
+  .product__name {
+    margin-bottom: 80px;
+  }
+  .product__menu {
+    display: none;
+  }
+  .product__content {
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 745px) {
+  .logo {
+    z-index: 11;
+  }
+  h1 {
+    padding-left: 0;
+    font-size: 50px;
+    line-height: 66px;
+    text-align: center;
+    max-width: 100%;
+  }
+  .menu__btn {
+    z-index: 10;
+  }
+}
+
+@media (max-width: 650px) {
+  .product__content {
+    width: 100%;
+  }
+  .seafood__items {
+    margin-top: 40px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .seafood__item {
+    margin-bottom: 10px;
+  }
+  .contacts {
+    background-image: none;
+  }
+  .contacts-box {
+    padding: 33px 0 33px 0;
+    width: 100%;
+  }
+}
+
+@media (max-width: 600px) {
+  .product__content-box {
+    display: block;
+  }
+  .product__content-list {
+    width: 100%;
+  }
+}
+
+@media (max-width: 470px) {
+  h1 {
+    font-size: 34px;
+    line-height: 44px;
+  }
+  .header__content-btn {
+    margin-left: 50px;
+  }
+  .header-slider {
+    padding-left: 50px;
+  }
+  .header-slider__numbers {
+    left: 5px;
+  }
+  .header-slider__arrow {
+    left: 9px;
+  }
+  .product {
+    padding-top: 50px;
+  }
+  .product__content-btn {
+    padding: 12px 55px;
+  }
+}
+
+@media (max-width: 370px) {
+  h1 {
+    padding-top: 125px;
+  }
+  .phone {
+    margin-right: 0;
+  }
+  .logo {
+    margin-left: 0;
+  }
+  .logo__img {
+    width: 88px;
+  }
+  .menu__list {
+    left: 10%;
+    right: 10%;
+  }
+  .header-slider__numbers {
+    bottom: 158px;
+  }
+  .header-slider__arrow-next {
+    bottom: 107px;
+  }
+  .header__content-btn {
+    margin: auto;
+    margin-top: 18px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
