--- a/sass/blocks/_information.sass
+++ b/sass/blocks/_information.sass
@@ -70,3 +70,7 @@
             border: 1px solid #001E64
             border-radius: 20px
             cursor: pointer
+            transition: all .3s
+        &-btn:hover
+            color: #FFFFFF
+            background-color: #001E64
