--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,3 +3,6 @@
 @import 'blocks/_information.sass'
 @import 'blocks/_seafood.sass'
 @import 'blocks/_content.sass'
+@import 'blocks/_contacts.sass'
+@import 'blocks/_footer.sass'
+@import '_media.sass'
