--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -11,6 +11,7 @@
         padding-bottom: 20px
         margin-top: -80px
         min-height: 100ov
+        overflow: hidden
         &-btn
             font-family: 'Roboto Slab', serif
             font-style: normal
@@ -25,9 +26,13 @@
             display: inline-block
             transform: translateY(-100px)
             position: absolute
+            transition: all .3s
+        &-btn:hover
+            color: #001E64
+            background-color: #FFFFFF
         &-box
             display: flex
-            margin-left: 100%
+            justify-content: flex-end
             margin-right: 30px
             font-size: 18px
             line-height: 21px
@@ -88,6 +93,34 @@
     margin-right: 43px
 .menu
     margin-top: 16px
+    &__btn
+        width: 40px
+        border: none
+        background-color: transparent
+        padding: 13px 0
+        cursor: pointer
+        position: relative
+        display: none
+    &__btn::after
+        content: ""
+        position: absolute
+        height: 4px
+        background-color: #001E64
+        left: 0
+        right: 0
+        bottom: 0
+    &__btn::before
+        content: ""
+        position: absolute
+        height: 4px
+        background-color: #001E64
+        left: 0
+        right: 0
+        top: 0
+    &__btn span
+        display: block
+        height: 4px
+        background-color: #001E64
     &__list
         display: flex
     &__item + &__item
